--- a/templates/alloa_matching/base.html
+++ b/templates/alloa_matching/base.html
@@ -4,7 +4,8 @@
 <html>
     <head>
         {% block head_block %}
-            <title>Alloa</title>
+        <link rel="icon" href="{% static 'images/matching.png' %}">
+        <title>Alloa - Home</title>
         {% endblock%}
     </head>
     <body>
