--- a/templates/alloa_matching/upload.html
+++ b/templates/alloa_matching/upload.html
@@ -1,13 +1,17 @@
 {% extends 'alloa_matching/base.html' %}
 {% load staticfiles %}
 
+{% block head_block %}
+    <link rel="stylesheet" type="text/css" href='{% static "/css/messages.css" %}'>
+    <link rel="icon" href="{% static 'images/matching.png' %}">
+    <title>Alloa - New Instance</title>
+{% endblock %}
+
 {% block body_block %}
     {% if messages %}
-        <ul class="messages">
             {% for message in messages %}
-            <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                    <p {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</p>
             {% endfor %}
-        </ul>
     {% endif %}
     <h1>New Instance</h1>
     <h3>File Templates</h3>
