--- a/templates/alloa_matching/academic_levels.html
+++ b/templates/alloa_matching/academic_levels.html
@@ -7,15 +7,16 @@
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <script src="https://kit.fontawesome.com/2e8b22a65b.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href='{% static "/css/messages.css" %}'>
+    <link rel="icon" href="{% static 'images/matching.png' %}">
+    <title>Alloa - {{instance.name}}</title>
 {% endblock %}
 
 {% block body_block %}
     {% if messages %}
-        <ul class="messages">
             {% for message in messages %}
-                <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                    <p {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</p>
             {% endfor %}
-        </ul>
     {% endif %}
     <div style = "margin:20px 0;"><h1>{{ instance.name }} - </h1><h3 class = "stage">Advisor Level Rankings</h3></div>
     <h2>Your Advisor Levels</h2>
@@ -99,7 +100,7 @@
         display:inline;
     }
     .stage{
-        background-color: #e89015;
+        background-color: #e66300;
         color: white;
         padding: 5px;
         border-radius:5px;
@@ -124,13 +125,12 @@
         width:100%;
         border-collapse:collapse;
         border-radius:5px;
-        border: 1px solid grey;
+        border-bottom: 1px solid grey;
         margin: 0 0 10px 0;
     }
     .result th{
         text-align:left;
-        background-color:grey;
-        color:white;
+        color:#303030;
         font-size:24px;
     }
     .result th,td{
@@ -138,14 +138,11 @@
         font-family:arial;
         font-size: 16px;
     }
-    .extra{
-        display:block; 
-    }
     i{
         font-size:24px;
         margin-right:10px;
         float:right;
-        color:white;
+        color:#303030;
     }
     .fix-form{
         position:fixed;
