--- a/templates/alloa_matching/academic_results.html
+++ b/templates/alloa_matching/academic_results.html
@@ -4,9 +4,17 @@
 {% block head_block %}
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <script src="https://kit.fontawesome.com/2e8b22a65b.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href='{% static "/css/messages.css" %}'>
+    <link rel="icon" href="{% static 'images/matching.png' %}">
+    <title>Alloa - {{instance.name}}</title>
 {% endblock %}
 
 {% block body_block %}
+        {% if messages %}
+                {% for message in messages %}
+                        <p {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</p>
+                {% endfor %}
+        {% endif %}
     <div style = "margin:20px 0;"><h1>{{ instance.name }} - </h1><h3 class = "stage">Results Available</h3></div>
     {% if unmatched %}
         <h5>No students were matched to you.</h5>
@@ -56,13 +64,12 @@
         width:100%;
         border-collapse:collapse;
         border-radius:5px;
-        border: 1px solid grey;
+        border-bottom: 1px solid grey;
         margin: 0 0 10px 0;
     }
     .result th{
         text-align:left;
-        background-color:grey;
-        color:white;
+        color:#303030;
         font-size:24px;
     }
     .result th,td{
@@ -70,12 +77,11 @@
         font-family:arial;
         font-size: 16px;
     }
-
     i{
         font-size:24px;
         margin-right:10px;
         float:right;
-        color:white;
+        color:#303030;
     }
 {% endblock%}
 
